Fix sidebar scrollbar jumping

--- a/assets/css/sensei-course-theme/layout.scss
+++ b/assets/css/sensei-course-theme/layout.scss
@@ -89,8 +89,7 @@ body.sensei-course-theme {
 
 		&__content, &__footer {
 			margin: 0 !important;
-			padding: 24px;
-			padding-right: 16px;
+			padding: 12px;
 			padding-bottom: 12px;
 		}
 
